Sun Feb 23 09:54:49 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* fileattr.c (fileattr_read): If a filename is duplicated,
	continue to ignore subsequent lines but free the node so that we
	don't leak memory.
	* sanity.sh (devcom3): New tests devcom3-8 and devcom3-9 test for
	behavior on duplicated filenames.

	* fileattr.h: Add comment about unrecognized ENT-TYPE and order of
	lines in fileattr file.
	* fileattr.c (struct unrecog, unrecog_head): New variables, to
	record unrecognized lines.
	(fileattr_startdir): Assert that unrecog_head == NULL.
	(fileattr_read): Record unrecognized lines in unrecog_head linked
	list rather than ignoring them.
	(fileattr_write): Also write out unrecognized lines, if any.
	* sanity.sh (devcom3): New tests, test for above fix.

	* fileattr.h (fileattr_modify): Fix example in comment.

Sat Feb 22 08:30:27 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* sanity.sh: Add variable username.
	(basica rdiff multibranch log log2): Use it instead of our own
	(inconsistent) ways of matching an author name.

	* filesubr.c, root.c, rtag.c, server.c, subr.c, update.c,
	wrapper.c: Nuke PATH_MAX.
	* cvs.h, wrapper.c (wrap_fromcvs_process_file): Now returns void
	(return value had been unused).
	* cvs.h: Adjust comment to reflect the fact that PATH_MAX is
	gone, at least from src/*.c (except safe_location, as noted).

22 Feb 1997  patch by Tom Hageman  <tom@basil.icce.rug.nl> (4 Jun 1996)
	updated and commented by Jim Kingdon  <kingdon@harvey.cyclic.com>

	* update.c (checkout_file): Call unlink_file_dir on backup, not
	unlink_file.

Fri Feb 21 16:40:03 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* Makefile.in (DISTFILES): Remove NOTES.

	* NOTES: Removed.  bcopy->memcpy is done.  "static buffers" I
	assume refers to what is covered by reentrancy text in HACKING.
 	Obstack idea moved to comment in hash.c (at nodecache).  Checking
	system calls for error returns largely done, and isn't a very